merge met IRSF